2008-03-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* rootdens_GP1D.C, rootdens_G_P.C (Rootdens::create_uniform): Made 

	* rootdens.C (Rootdens::load_base): Call 'Model::load_model'.

2008-03-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* model.h, model.C (Model::load_model): New utility.
	* alist.C, alist.h (AttributeList::add_strings): New convenience
	function.
	* format_LaTeX.C (FormatLaTeX::alist_description): Use it.

	* model.h (ModelLogable, ModelAListed): New base classes.
	* all: Use them.

2008-03-13  Mikkel Mollerup  <mmo@life.ku.dk>

	* soil_water.h, soil_water.C, chemical.h, chemical_std.C: Prepare
	for mobile/immobile solute support.  
	* column_std.C: Update caller.
	
2008-03-12  Mikkel Mollerup  <mmo@life.ku.dk>

	* Makefile (COMPONENTS): Added it.
	* mobsol.C, mobsol.h: New component.
	* horizon.h, horizon.C, soil.h, soil.C: Support it.
	
2008-03-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_sow.C (plant): New alias.
	(row_width): New parameter.
	* column_std.C, column.h, field.C, field.h (sow): Take row width
	argument. 
	* vegetation.h, vegetation_permanent.C, vegetation_crops.C (sow): Ditto.
	* crop_std.C, crop_simple.C, crop_sold.C, crop_old.C:
	* crop.h, root_system.C, root_system.h (initialize): Ditto.
	* rootdens_GP2D.C, rootdens_GP1D.C, rootdens_AP.C, rootdens_PLF.C:
	* rootdens_PLF, rootdens.h (initalize): New function.

2008-03-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* program_document.C (ProgramDocument::print_model)
	(ProgramDocument::print_model, ProgramDocument::print_fixed): Use
	'Format::alist_description'.

2008-03-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* format.C, format.h, format_LaTeX.C, format_LaTeX.h
	(format_type): New virtual member function.
	* format_LaTeX.C (FormatLaTeX::formatp, FormatLaTeX::raw): Use it.
	* format.C, format.h (Format::alist_discription): New virtual
	member function.

2008-03-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.27 released.
