@@ -1,6 +1,11 @@
 2008-03-17  Per Abrahamsen  <abraham@dina.kvl.dk>
 
-	* rootdens_GP1D.C, rootdens_G_P.C (Rootdens::create_uniform): Made 
+	* library.h (doc_fun): Changed parameter type.
+	* log_select.C (LogSelect::document_entries): Update.
+	* program_document.C (ProgramDocument::print_model): Update.
+
+	* rootdens_GP1D.C, rootdens_G_P.C (Rootdens::create_uniform): Made
+	the later default for 1D.
 
 	* rootdens.C (Rootdens::load_base): Call 'Model::load_model'.
 
